--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,33 @@
-cmake_minimum_required(VERSION 4.0)
+cmake_minimum_required(VERSION 3.15)
 project(DuckEngine VERSION 1.0.0)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(DuckEngine src/config.h src/main.cpp)
+find_package(OpenGL REQUIRED)
 
-target_include_directories(DuckEngine PRIVATE Dependencies)
-
-add_library(glfw3 STATIC IMPORTED)
-set_target_properties(glfw3 PROPERTIES
-        IMPORTED_LOCATION "${CMAKE_SOURCE_DIR}/Dependencies/GLFW/lib-mingw-w64/libglfw3.a"
+add_executable(DuckEngine
+        src/config.h
+        src/main.cpp
+        dependencies/glad.c
 )
 
-target_link_libraries(DuckEngine glfw3 opengl32)
+# Include directories for headers
+target_include_directories(DuckEngine PRIVATE
+        ${CMAKE_SOURCE_DIR}/dependencies
+        ${CMAKE_SOURCE_DIR}/dependencies/GLFW
+)
+
+# Import GLFW as a static library
+add_library(glfw3 STATIC IMPORTED)
+set_target_properties(glfw3 PROPERTIES
+        IMPORTED_LOCATION "${CMAKE_SOURCE_DIR}/dependencies/GLFW/lib-mingw-w64/libglfw3.a"
+)
+
+# Link libraries (order matters!)
+target_link_libraries(DuckEngine
+        glfw3
+        OpenGL::GL
+        gdi32      # Windows GDI
+        user32     # Windows user32
+        kernel32   # Windows kernel32
+)
