Cleaning up duckgamestate

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,8 @@ add_executable(DuckEngine
         dependencies/OpenAL/libs/Win64/dr_wav.h
         src/engine/system/DuckSpawnerManager.cpp
         src/engine/system/DuckSpawnerManager.h
+        src/engine/game/DuckGameState.h
+        src/engine/game/DuckGameState.cpp
 )
 
 
