Refactor on LifecycleSystem, DuckDeath separated properly to game logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ add_executable(DuckEngine
         src/engine/game/ecs/GunEntity.h
         src/engine/ecs/system/GunSystem.h
         src/engine/ecs/system/GunSystem.cpp
+        src/engine/game/ecs/system/DuckDeathSystem.cpp
 )
 
 
